1.3.0-beta: Update to 1.19.2. Fix misplacement