@@ -11,7 +11,6 @@ import ro.cofi.respawnablecrystals.RespawnableCrystals;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class RSCrystalsTabCompleter implements TabCompleter {
@@ -23,33 +22,31 @@ public class RSCrystalsTabCompleter implements TabCompleter {
     }
 
     @Override
-    public @Nullable List<String> onTabComplete(@NotNull CommandSender sender,
-                                                @NotNull Command command,
-                                                @NotNull String alias,
-                                                @NotNull String[] args) {
-
+    public @Nullable List<String> onTabComplete(
+        @NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, @NotNull String[] args
+    ) {
         // first argument, the option
         if (args.length == 1)
             return RSCrystalsCommand.getOptions().stream()
-                    .filter(option -> option.startsWith(args[0].toLowerCase()))
-                    .filter(key -> !key.equals(args[0].toLowerCase()))
-                    .collect(Collectors.toList());
+                .filter(option -> option.startsWith(args[0].toLowerCase()))
+                .filter(key -> !key.equals(args[0].toLowerCase()))
+                .toList();
 
         FileConfiguration config = plugin.getConfig();
 
         if (args.length == 2 && (args[0].equals("set") || args[0].equals("check")))
             return config.getKeys(true).stream()
-                    .filter(key -> !(config.get(key) instanceof MemorySection))
-                    .filter(key -> key.toLowerCase().startsWith(args[1].toLowerCase()))
-                    .filter(key -> !key.equals(args[1].toLowerCase()))
-                    .flatMap(key -> {
-                        int dotIndex = key.indexOf(".", args[1].length());
-                        String newKey = dotIndex == -1 ? key : key.substring(0, dotIndex + 1);
-                        return newKey.equals("") ? Stream.empty() : Stream.of(newKey);
-                    })
-                    .collect(Collectors.toList());
+                .filter(key -> !(config.get(key) instanceof MemorySection))
+                .filter(key -> key.toLowerCase().startsWith(args[1].toLowerCase()))
+                .filter(key -> !key.equals(args[1].toLowerCase()))
+                .flatMap(key -> {
+                    int dotIndex = key.indexOf(".", args[1].length());
+                    String newKey = dotIndex == -1 ? key : key.substring(0, dotIndex + 1);
+                    return newKey.equals("") ? Stream.empty() : Stream.of(newKey);
+                })
+                .toList();
 
-        // don't completely anything else
+        // don't suggest anything else
         return Collections.emptyList();
     }
 }
